--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 LIRA is an R package to predict the effectiveness of immunotherapy in patients with NSCLC.
 
 ## 1.Introduction
-  1.LIRA was designed to predict the reponse to immunotherapy in patients with NSCLC.
+  1.LIRA was designed to predict the response to immunotherapy in patients with NSCLC.
   2.This package consists a random survival model based on expression profiles of 50 genes, which were selected through univariate Cox regression and subgroup analysis.
   3.This package provides functions for different scenarios and allows visual assessment to determine whether patients are suitable for immunotherapy.
 
@@ -33,12 +33,11 @@ The dependencies includes`IOBR`,`crayon`,`ggplot2`,`randomForest`,`randomForestS
 
 ```{r installation, warning=FALSE, message=FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE)) install.packages("BiocManager")
-depens<-c("IOBR", "crayon", "ggplot2", "randomForest", "randomForestSRC")
+depens<-c( "crayon", "ggplot2", "randomForest", "randomForestSRC")
 for(i in 1:length(depens)){
   depen<-depens[i]
   if (!requireNamespace(depen, quietly = TRUE))   BiocManager::install(depen,update = FALSE)
 }
-
 if (!requireNamespace("IOBR", quietly = TRUE))  devtools::install_github("IOBR/IOBR")
 ```
 
@@ -57,7 +56,7 @@ library(tidyverse)
 
 ## 3.Usage
 ### Obtain dataset from TCGA using UCSCXenaTools R package.
-For transcriptomic data of TCGA data sets, we strongly recommend user to use UCSCXenaTools R package. Here, we download counts data of TCGA-LUAD from UCSC using UCSCXenaTools R package
+For transcriptome data of TCGA data sets, we strongly recommend user to use UCSCXenaTools R package. Here, we download counts data of TCGA-LUAD from UCSC using UCSCXenaTools R package
 ```{r}
 # if (!requireNamespace("UCSCXenaTools", quietly = TRUE))
 #     BiocManager::install("UCSCXenaTools")
@@ -92,24 +91,23 @@ data(pdata_luad)
 summary(pdata_luad$ID%in%colnames(eset))
 ```
 
-### Annotate genes in expression matrix and remove duplicate genes using IOBR package[].
+### Annotating genes in expression matrix and remove duplicate genes using [IOBR package](https://iobr.github.io/book/).
 ```{r}
 eset <- anno_eset(eset = eset, annotation = anno_grch38, probe = "id", symbol = "symbol")
 ```
 
-## Calculate riskscore of TCGA
+## Calculate LIRA score of TCGA-LUAD samples
 We offer two methods to calculate the `LIRA` score for samples in different scenarios. One method involves calculating the score for individual samples by inputting them into the LIRA algorithm, while the other method involves calculating the score for multiple samples by inputting them together. We utilize data from the OAK studies as reference data to help users understand the distribution of scores for their samples.
 ```{r}
-res      <- lira_model2(eset       = eset,
-                        ref        = T, 
+res      <-  lira_model(eset       = eset,
+                        ref        = NULL, 
                         loop       = FALSE,
-                        check_eset = T, 
+                        check_eset = FALSE, 
                         pdata      = pdata_luad,
                         id_pdata   = "ID",
                         scale      = TRUE,
                         plot       = FALSE,
-                        return_all = T)
-colnames(res)[2] <- "LIRA"
+                        return_all = FALSE)
 ```
 
 ```{r}
@@ -166,7 +164,7 @@ p + plot_annotation(tag_levels = 'A')
 
 References
 ---------
-1.Zeng D, Fang Y, Chen G, ..., Liao W; Predicting NSCLC immunotherapy resistance based on Random Forest Model. (2023) *Under Review*.
+1.Zeng D, Fang Y, Chen G, ..., Liao W; Construction of An Artificial Intelligence model for Predicting NSCLC immunotherapy Response： Results from OAK, POPLAR and ORIENT-11 trials. (2023) *Under Review*.
 
 
 Reporting bugs
